# Engelina

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mypy.ini
backend/: main.py  requirements.txt
services/: .gitignore
services/backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/backend/src/: config.py  main.py  settings.py  utils.py
services/backend/src/database/: deps.py  models.py  session.py
services/backend/src/database/crud/: achievement.py  error.py  history.py  leaderboard.py  message.py  messages_with_awards.py  stats.py  user.py  user_level.py
services/backend/src/database/migrations/: env.py
services/backend/src/routers/: achievements.py  admin.py  auth.py  health.py  history.py  leaderboard.py  messages.py  stats.py  users.py
services/backend/src/schemas/: achievement.py  admin.py  auth.py  chat.py  error.py  leaderboard.py  message.py  stats.py  user.py
services/bot/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/bot/src/: bot.py  config.py  dispatcher.py  main.py  settings.py  utils.py
services/bot/src/FSM/: broadcast.py
services/bot/src/buttons/: achievement.py  admin.py  leaderboard.py  stats.py  user.py
services/bot/src/handlers/: admin.py  user.py
services/bot/src/middlewares/: admin.py
services/db/: pyproject.toml
services/worker/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
services/worker/src/: app.py  chat.py  logging_config.py  model.py  prompts.py  queue.py  schemas.py  service.py  settings.py  tasks.py  utils.py
(+14 files in other folders)
