[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Engelina backend"
authors = ["rudast <ruslan5haertdinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.0"
sqlalchemy = "^2.0.44"
datetime = "^6.0"
pydantic-settings = "^2.12.0"
uvicorn = "^0.38.0"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
aiohttp = "^3.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
