[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Telegram bot"
authors = ["rudast <ruslan5haertdinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.20"
pydantic-settings = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
