[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Engelina worker"
authors = ["rudast <ruslan5haertdinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = "^2.9.1"
bitsandbytes = "^0.48.2"
accelerate = "^1.12.0"
transformers = ">=4.44.0,<5.0.0"
huggingface-hub = "<1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
